# streamvault

./: .dockerignore  .env.example  .gitignore  AUDIT_BUGS.md  BUGS.md  BUTTON_AUDIT.md  Dockerfile  Makefile  README.md  REFERENCE.md  docker-compose.yml  entrypoint.sh
.commandcode/taste/: taste.md
.github/runner/: Dockerfile
.github/scripts/: callback.sh  monitor-download.sh  monitor-transcode.sh  monitor-transmission.sh  test-transmission.sh  upload-checkpoint.sh  upload-to-discord.sh  validate-transmission.sh
.github/workflows/: build-runner.yml  docker-build.yml  streamvault-pipeline.yml
backend/: Cargo.toml
backend-bun/: .dockerignore  Dockerfile  drizzle.config.ts  package.json  tsconfig.json
backend-bun/migrations/: 0000_chunky_quasimodo.sql  0001_add_check_constraints.sql  0001_remove_checkpoint_columns.sql
backend/migrations/: 20250617000001_initial.sql  20250617000002_checkpoint_urls.sql
backend/src/: app.rs  config.rs  error.rs  main.rs
backend/src/api/: auth.rs  callbacks.rs  events.rs  library.rs  mod.rs  queue.rs  search.rs  settings.rs  static_files.rs  torrent.rs
backend/src/db/: mod.rs  queries.rs
backend/src/notifications/: mod.rs  telegram.rs
backend/src/pipeline/: channel.rs  mod.rs  trigger.rs
backend/src/stremio/: mod.rs  models.rs  proxy.rs  routes.rs
backend/src/worker/: mod.rs  monitor.rs  scheduler.rs
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docker/: Dockerfile  entrypoint.sh
docs/: SESSION-2026-06-20-summary.md
scripts/: setup-discord-channels.sh  test-transmission.sh
(+55 files in other folders)
