[package]
name = "streamvault"
version = "0.1.0"
edition = "2021"
description = "Personal media streaming pipeline — Stremio addon"

[dependencies]
axum = { version = "0.7", features = ["json", "query"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
librqbit = "8"
url = "2"